--- a/src/components/SiteHeader.astro
+++ b/src/components/SiteHeader.astro
@@ -5,7 +5,7 @@ import { withBase } from '../utils/paths';
 
 <header class="site-header">
 	<div class="inner">
-		<a class="brand" href="/">
+		<a class="brand" href={withBase('/')}>
 			<span class="brand-dot" aria-hidden="true"></span>
 			<span class="brand-text">{siteConfig.title}</span>
 		</a>
