--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,7 +10,7 @@ import { siteConfig } from '../site.config';
 			这里是 <strong>{siteConfig.author}</strong> 的个人博客。你可以在这里阅读文章、搜索、按分类浏览。
 		</p>
 		<p class="muted">
-			平常在分享一些自己写的杂乱小说，亦或者上传一些学习笔记。
+			平常在这里分享一些自己写的杂乱小说，亦或者上传一些学习笔记。
 		</p>
 	</section>
 </Layout>
