--- a/src/components/Toc.astro
+++ b/src/components/Toc.astro
@@ -146,6 +146,8 @@ const visible = headings.filter((h) => h.depth >= 2 && h.depth <= 4);
 	.toc-body {
 		overflow: auto;
 		padding-right: 4px;
+		max-height: 100%;
+		height: 100%;
 		min-height: 0;
 		scrollbar-width: none;
 		-ms-overflow-style: none;
